--- a/react-app/src/components/PostPage/postPage.css
+++ b/react-app/src/components/PostPage/postPage.css
@@ -1,10 +1,30 @@
-.post-container {
+.post-container,
+.comments-container {
     width: 650px;
     margin: auto;
 }
 
+/* .post-container {
+    margin-top: 75px;
+
+} */
+
+.post {
+    /* border: 1px solid black */
+    margin-top: 100px;
+    box-shadow: 0px 0px 6px 3px rgb(96, 178, 189), -4px 6px 7px 2px rgba(77, 77, 77, 0.671);
+    padding: 15px;
+    border-radius: 8px;
+}
+
 .post__title h2 {
+    margin-top: 0px;
     margin-bottom: 5px;
+    color: rgb(0, 86, 97);
+}
+
+.post__details {
+    color: lightgrey
 }
 
 .post__btns {
